prevent form from jumping on input

--- a/txmatching/web/frontend/src/app/components/configuration-countries/configuration-countries.component.scss
+++ b/txmatching/web/frontend/src/app/components/configuration-countries/configuration-countries.component.scss
@@ -58,8 +58,9 @@
 
         flex: 1;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         margin: 0 calc(-1 * #{$field-gap});
+        min-height: 80px;
 
         .mat-form-field {
           flex: 1;
@@ -68,6 +69,10 @@
 
         .arrow {
           margin: 0 $field-gap;
+          height: 100%;
+          min-height: 80px;
+          display: flex;
+          align-items: center;
         }
       }
 
